--- a/index.html
+++ b/index.html
@@ -3,48 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
     <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="title-portfolio">Our Portfolio</h2>
 
         <ul>
             <li>
                 <img src="./images/img-1.jpeg" alt="banking application"
                 width="360" height="300" />
-                <h3>Banking App</h3>
-                <p>App</p>
+                <h3 class="description-portfolio">Banking App</h3>
+                <p class="description-portfolio-text">App</p>
             </li>
 
             <li>
                 <img src="./images/img-2.jpeg" alt="Cashless Payment" width="360" height="300" />
-                <h3>Cashless Payment</h3>
-                <p>Marketing</p>
+                <h3 class="description-portfolio">Cashless Payment</h3>
+                <p class="description-portfolio-text">Marketing</p>
             </li>
 
             <li>
                 <img src="./images/img-3.jpeg" alt="laptop" width="360" height="300" />
-                <h3>Meditation App</h3>
-                <p>App</p>
+                <h3 class="description-portfolio">Meditation App</h3>
+                <p class="description-portfolio-text">App</p>
             </li>
 
             <li>
                 <img src="./images/img-4.jpeg" alt="Taxi Service" width="360" height="300" />
-                <h3>Taxi Service</h3>
-                <p>Marketing</p>
+                <h3 class="description-portfolio">Taxi Service</h3>
+                <p class="description-portfolio-text">Marketing</p>
             </li>
 
             <li>
                 <img src="./images/img-5.jpeg" alt="Design" width="360" height="300" />
-                <h3>Screen Illustrations</h3>
-                <p>Design</p>
+                <h3 class="description-portfolio">Screen Illustrations</h3>
+                <p class="description-portfolio-text">Design</p>
             </li>
 
             <li>
                 <img src="./images/img-6.jpeg" alt="Woman" width="360" height="300" />
-                <h3>Online Courses</h3>
-                <p>Marketing</p>
+                <h3 class="description-portfolio">Online Courses</h3>
+                <p class="description-portfolio-text">Marketing</p>
             </li>
 
         </ul>
