--- a/index.html
+++ b/index.html
@@ -99,8 +99,6 @@
             </ul>
     
         </section>
-    
-    </main>
 
     <section>
         <h2 class="title-portfolio">Our Portfolio</h2>
@@ -145,9 +143,10 @@
 
         </ul>
     </section>
+    </main>
 
     <footer class="footer-info">
-        <a class="footer-logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
+        <a class="footer-logo" href="./index.html">Web<span class="logo-studio-1">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
