--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </main>
 
     <footer class="footer-info">
-        <a class="footer-logo" href="./index.html">Web<span class="logo-studio-1">Studio</span></a>
+        <a class="footer-logo" href="./index.html">Web<span class="logo-studio-lower">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
